# libmemif

./: BuildInstructions.md  ExampleSetup.md  GettingStarted.md  Makefile.am  README.md  UserManual.md  dockerfile
docs/: NextSteps.md
examples/: ExampleSetup.md  README.md
examples/icmp_responder/: icmp_proto.c  icmp_proto.h  main.c
examples/icmp_responder2/: main.c
examples/icmp_responder3/: main.c
src/: libmemif.h  main.c  memif_private.h  socket.c  socket.h
test/: main_test.c  main_test.h  socket_test.c  socket_test.h  unit_test.c  unit_test.h
